--- a/package.json
+++ b/package.json
@@ -81,12 +81,7 @@
     "ua-parser-js": "1.0.33",
     "uuid": "8.3.2",
     "web-push": "3.4.5",
-    "yarn": "1.22.17"
-  },
-  "optionalDependencies": {
-    "sqlite3": "5.1.7"
-  },
-  "devDependencies": {
+    "yarn": "1.22.17",
     "@babel/core": "7.17.10",
     "@babel/plugin-transform-runtime": "7.18.2",
     "@babel/preset-env": "7.17.10",
