Fix Docker build

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,9 @@ services:
         container_name: trollroom
         image: ghcr.io/noagenda/trollroom:${APP_TAG:-local}
         build: .
-        environment:
-            NODE_ENV: development
+        # todo fix development environment
+        #environment:
+        #    NODE_ENV: development
         ports:
             - "9000:9000"
         volumes:
